--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "compression-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "mockjs": "^1.0.1-beta3",
     "postcss-pxtorem": "^4.0.1",
     "sass": "^1.18.0",
