--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "vue": "^2.6.11",
     "vue-router": "^3.0.3",
     "vue-savedata": "^2.0.5",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xgplayer": "^2.10.1",
+    "xgplayer-vue": "^1.1.5"
   },
   "devDependencies": {
     "@babel/register": "^7.6.2",
