--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.2.0",
     "async-validator": "^3.4.0",
     "axios": "^0.19.0",
     "core-js": "2.6.5",
