乔宇优化添加不缓存

--- a/nginx.config
+++ b/nginx.config
@@ -6,6 +6,9 @@ server {
                 try_files $uri $uri/ /index.html;
                 index index.html;
         }
+        location = /index.html {
+        add_header Cache-Control "no-cache, no-store";
+    }
         access_log  /var/log/nginx/firmiana_wx_web.yunniao.cn.access.log main;
         error_log   /var/log/nginx/firmiana_wx_web.yunniao.cn.error.log  error;
 }
