乔宇优化添加不缓存

--- a/nginx.config
+++ b/nginx.config
@@ -5,7 +5,7 @@ server {
                 root /site/web;
                 try_files $uri $uri/ /index.html;
                 index index.html;
-                add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+                add_header Cache-Control 'no-store';
         }
         access_log  /var/log/nginx/firmiana_wx_web.yunniao.cn.access.log main;
         error_log   /var/log/nginx/firmiana_wx_web.yunniao.cn.error.log  error;
