更新 nginx.config

--- a/nginx.config
+++ b/nginx.config
@@ -2,10 +2,16 @@ server {
         listen 80;
         underscores_in_headers on;
         location / {
-                root /site/web;
-                try_files $uri $uri/ /index.html;
-                index index.html;
+            root /site/web;
+            try_files $uri $uri/ /index.html;
+            index index.html;
         }
+        
+        location = /index.html {
+            root /site/web;
+            expires -1;
+        }
+        
         access_log  /var/log/nginx/firmiana_wx_web.yunniao.cn.access.log main;
         error_log   /var/log/nginx/firmiana_wx_web.yunniao.cn.error.log  error;
 }
