更新 nginx.config

--- a/nginx.config
+++ b/nginx.config
@@ -9,7 +9,11 @@ server {
         
         location = /index.html {
             root /site/web;
-            expires -1;
+            add_header Last-Modified $date_gmt;
+            add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+            if_modified_since off;
+            expires off;
+            etag off;
         }
         
         access_log  /var/log/nginx/firmiana_wx_web.yunniao.cn.access.log main;
